@@ -872,3 +872,4 @@ Apache logs outside a domain's home directory are now included in backups and re
 Added the --delete-existing flag to migrate-domain.pl, to remove any existing virtual server with the same name before re-migrating.
 Plesk sub-domains are now included with migrating, including any users for managing their content.
 The background collectinfo.pl cron job can be run less frequently or disabled using a new Module Config page option.
+Added a script to change the Virtualmin license in all needed files on an already installed system.
